k8s/tezblock/production/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tezblock-frontend
  namespace: tezblock
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - tezblock.prod.gke.papers.tech
      secretName: tezblock-prod-tls
    - hosts:
        - tezblock.io
      secretName: tezblock-mvp-prod-tls  
  rules:
    - host: tezblock.prod.gke.papers.tech
      http:
        paths:
          - backend:
              serviceName: tezblock-frontend
              servicePort: 80
    - host: tezblock.io
      http:
        paths:
          - backend:
              serviceName: tezblock-frontend
              servicePort: 80
